--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.27.0",
     "eslint-config-next": "^13.0.3",
+    "lottie-react": "^2.3.1",
     "next": "^13.0.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
