--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.4.9",
     "@notionhq/client": "^2.2.2",
     "dotenv": "^16.0.3",
     "eslint": "8.27.0",
