--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-lottie-player": "^1.5.0"
+    "react-lottie-player": "^1.5.0",
+    "react-scroll": "^1.8.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
