--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://mickck.github.io/next-portfolio",
   "name": "next-porfolio",
   "version": "0.1.0",
   "private": true,
@@ -23,11 +22,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie-player": "^1.5.0",
-    "react-scroll": "^1.8.8"
+    "react-scroll": "^1.8.8",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
